Twitter Bootstrap y layout de la aplicación.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,5 +22,6 @@
  * default. @import "bootstrap-responsive"; to get them.
  *
  *= require_self
+ *= require bootstrap_and_overrides
  *= require_tree .
  */
