Grafo en la vista de cadenas.

--- a/app/views/cadenas/show.html.haml
+++ b/app/views/cadenas/show.html.haml
@@ -4,6 +4,8 @@
   %b Nombre:
   = @cadena.nombre
 
+= render 'grafo'
+
 = link_to 'Edit', edit_cadena_path(@cadena)
 \|
 = link_to 'Back', cadenas_path
